@@ -1,5 +1,5 @@
 .icon-gridcontainer .x-tree-node-icon {
-    background-image: url(../icons/data_grid.png) !important;
+    background-image: url(../icons/grid_folder.png) !important;
 }
 
 .icon-gridclasskey-document-edit {
